Don't use @EnvType on methods